Conclusions and Recommendations for Future Work

--- a/report.tex
+++ b/report.tex
@@ -455,7 +455,6 @@ Furthermore, we intend to make the entire platform (software, hardware, accompan
 
 Finally, we chose to print the housing out of PLA, a cornstarch-based bioplastic. This material releases no harmful fumes when used for 3D printing, from either a health or environment standpoint. This material strikes a balance between durability and biodegradability, but it is able to be composted in an industrial environment (i.e. under higher temperatures, with the aid of microbial digestion). The main environmental benefit of using PLA is that no crude oil is used in its production; only corn. It is also one of the cheapest and easiest to use materials for 3D printing, making it an ideal candidate for a cheap, widely-available option for printing our open-source design.
 
-\newpage
 \section{Design Project Management Summary}
 \subsection{Design Project Plan Changes}
 There were no significant changes to our design project plan during the winter 2022 term. This is because we came into this term having mostly completed and validated all the core pieces of our project, except for the glasses casing, and it was just a matter of integrating them all. Luckily, we had no major integration problems that put our schedule at risk. Additionally, as explained in section \ref{schedule}, we stopped using our primary project management software halfway through the term due to an unexpected paywall introduced that removed our ability to view our schedule using Gantt charts.
@@ -468,6 +467,9 @@ One of the things we did well was to agree to meet weekly for internal meetings 
 One of the things we did not do well was assigning timelines and due dates on tasks. We took a very free-flowing approach to tasks, where we didn't decide on a deliverable date to aim for, and left it up as a discretion to the person working on it when it could be done by. As a result, there was a lack of accountability and some tasks dragged on for a very long time. Our plan to mitigate this was through the introduction of ClickUp as our project management software. While that worked well initially, eventually we didn't do a great job of keeping up with the ClickUp timelines and keeping them updated. We ended up usually neglecting ClickUp for a few weeks and then updating it once it started to get really out of date. To make matters worse, we reached our free tier capacity to view our project Gantt charts, which discouraged us even more from using ClickUp, and around the midpoint of the winter 2022 term, we abandoned it completely and switched to using our Notion meeting logs as the primary way of keeping track of progress and remaining work items.
 
 \section{Conclusions and Recommendations for Future Work}
+While we didn't accomplish one of the core design objectives of our initial design (no network connection required), we are still proud of the prototype we were able to build and demonstrate. However, we know a version of our design can be accomplished without a network connection through the Apple MFi program \cite{apple-mfi}, and that would probably be the first thing we would look into if we were to pursue this project further and aim to bring it closer to a commercial product. Regardless, we hope our project in its current form still serves as a valuable contribution to the assistive devices space for the visually impaired community.
+
+Our last steps include writing a detailed step-by-step build guide to allow anybody to recreate our solution and further improve on it. Our entire platform (software and hardware) will be open-sourced, and we intend to do some outreach to organizations in the visually impaired community to spread the word about what we built. We envision a future where advanced assistive devices are available to everyone, regardless of background or income.
 
 \section{Acknowledgements}
 Thank you to the individuals from Lighthouse SF and UW AccessAbility Services (not named for anonymity) who took the time and effort to speak to our team. Their insights and connection were useful throughout the development process. Thank you as well to our faculty advisor, Professor John Zelek, for meeting with us on a biweekly basis to discuss progress and provide valuable technical consultation. Finally, a thank you to Professor Oscar Nespoli for his useful design knowledge presented in the GENE 403 and 404 course content.
