--- a/report.tex
+++ b/report.tex
@@ -452,6 +452,7 @@ As part of our implementation, error detection and feedback were integrated such
 \end{itemize}
 Note: for demonstration purposes, model confidence and system errors are not communicated, though the features are implemented. If integrated with the system, these features will allow the device to not put the user in a position of relying on the device if it's unable to perform as best as it can.
 
+\newpage
 \section{Design for Regulatory Requirements}
 Ontario (and the Canadian government), like many legal jurisdictions around the world, has regulations regarding the manufacture and sale of assistive devices. However, these regulations primarily impose restrictions upon medical technology. Our solution is non-intrusive and does not attempt or promise to perform a medical function of any kind. It, therefore, does not meet the requirements to be categorized as even a Class I medical device.
 
@@ -479,6 +480,7 @@ One of the things we did well was to agree to meet weekly for internal meetings 
 
 One of the things we did not do well was assigning timelines and due dates on tasks. We took a very free-flowing approach to tasks, where we didn't decide on a deliverable date to aim for, and left it up as a discretion to the person working on it when it could be done by. As a result, there was a lack of accountability and some tasks dragged on for a very long time. Our plan to mitigate this was through the introduction of ClickUp as our project management software. While that worked well initially, eventually we didn't do a great job of keeping up with the ClickUp timelines and keeping them updated. We ended up usually neglecting ClickUp for a few weeks and then updating it once it started to get really out of date. To make matters worse, we reached our free tier capacity to view our project Gantt charts, which discouraged us even more from using ClickUp, and around the midpoint of the winter 2022 term, we abandoned it completely and switched to using our Notion meeting logs as the primary way of keeping track of progress and remaining work items.
 
+\newpage
 \section{Conclusions and Recommendations for Future Work}
 While we didn't accomplish one of the core design objectives of our initial design (no network connection required), we are still proud of the prototype we were able to build and demonstrate. However, we know a version of our design can be accomplished without a network connection through the Apple MFi program \cite{apple-mfi}, and that would probably be the first thing we would look into if we were to pursue this project further and aim to bring it closer to a commercial product. Regardless, we hope our project in its current form still serves as a valuable contribution to the assistive devices space for the visually impaired community.
 
