--- a/report.tex
+++ b/report.tex
@@ -717,7 +717,7 @@ We also updated the playback screen to function as a modal \cite{apple-modals}, 
 
 Finally, the app has full-featured VoiceOver support, using Apple's latest accessibility features. This means that although the main screen has a carousel of buttons, a user interacting with it using VoiceOver will 'see' it as a series of stacked buttons which they can iterate through as though it was a list. Some features targeted towards sighted users are ignored by VoiceOver, such as the arrow buttons used to navigate between buttons. The 'positioning' of some elements is also changed. In mobile design for sighted users, high priority elements are placed near the user's thumb, and low-priority ones are placed at the top of the screen so that they are out of the way. For VoiceOver users, this means that the least important elements will be read first, which is obviously undesirable. By leveraging some of the new iOS VoiceOver features, we were able to reorganize the order in which button labels etc are read out, such that the most important elements appear first.
 
-\subsection{Features}
+\subsubsection{Features}
 The app exposes 4 modes of processing, shown in Figure \ref{fig:app_features}.
 \begin{figure}[H]
 \centering
